<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundColor">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <FrameLayout
                android:id="@+id/controller"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:background="@color/tab_bg">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/controller_edit"
                    android:layout_marginStart="30dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="90dp"
                    android:gravity="bottom"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:text="@string/controller_title"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="90dp"
                    android:layout_marginTop="45dp"
                    android:textColor="@color/grayTextColor"
                    android:textSize="14sp"
                    android:text="@string/controller_detail"
                    />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/right_arrow"
                    android:tint="@color/white" />
            </FrameLayout>
            <FrameLayout
                android:id="@+id/sensor"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="30dp"
                android:background="@color/tab_bg">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/sensor_edit"
                    android:layout_marginStart="30dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="90dp"
                    android:gravity="bottom"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:text="@string/sensor_title"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="90dp"
                    android:layout_marginTop="45dp"
                    android:textColor="@color/grayTextColor"
                    android:textSize="14sp"
                    android:text="@string/sensor_detail"
                    />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/right_arrow"
                    android:tint="@color/white" />
            </FrameLayout>
            <FrameLayout
                android:id="@+id/channel"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="30dp"
                android:background="@color/tab_bg">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/channel_edit"
                    android:layout_marginStart="30dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="90dp"
                    android:gravity="bottom"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:text="@string/channel_title"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="90dp"
                    android:layout_marginTop="45dp"
                    android:textColor="@color/grayTextColor"
                    android:textSize="14sp"
                    android:text="@string/channel_detail"
                    />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/right_arrow"
                    android:tint="@color/white" />
            </FrameLayout>
            <FrameLayout
                android:id="@+id/system"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="30dp"
                android:background="@color/tab_bg">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/system_edit"
                    android:layout_marginStart="30dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="90dp"
                    android:gravity="bottom"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:text="@string/system_title"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="90dp"
                    android:layout_marginTop="45dp"
                    android:textColor="@color/grayTextColor"
                    android:textSize="14sp"
                    android:text="@string/system_detail"
                    />
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/right_arrow"
                    android:tint="@color/white" />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>